new endpoint random distribution
